# learningDocker

./: Dockerfile  Justfile  compose.yaml  pyproject.toml
