[project]
name = "learningDocker"
version = "0.0.1"
description = "This is an environment python with uv and docker"
requires-python = ">= 3.14"
readme = "README.md"
license = "MIT"
authors = [{ name = "Miquéias Henderson"}]

dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
]
[dependencies-groups]
dev = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "watchdog>=6.0.0",
]
